--- a/_posts/2019-05-07-Refactor.md
+++ b/_posts/2019-05-07-Refactor.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      重构-读书笔记
+subtitle:   Refactor
+date:       2019-07-05
+author:     Monk
+header-img: img/post-bg-rwd.jpg
+catalog: true
+tags:
+    - 读书笔记
+---
+
 # 重构
 概念：在不改变代码外在行为的前提下，对代码做出修改，以改进程序的内部结构。
 重构技术就是以微小的步伐修改程序。如果你犯下错误，很容易便可发现它。
