[TECH][glming] update

--- a/_posts/2019-07-31-Netty.md
+++ b/_posts/2019-07-31-Netty.md
@@ -11,3 +11,22 @@ tags:
 ---
 # Netty
 异步的、基于事件驱动、网络框架
+
+应用领域
+1. 客户端服务器端开发
+2. Socket开发
+3. 自定义协议开发
+
+### 基础构件块
+1. Channel
+2. 回调
+3. Future
+4. 事件
+5. ChannelHandler
+
+### 核心组件
+1. Channel
+2. EventLoop
+3. ChannelHandler
+4. ChannelPipeline
+5. ChannelHandlerContext
