[TECH][glming] update

--- a/_posts/2020-04-08-Redis.md
+++ b/_posts/2020-04-08-Redis.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      Redis笔记
+subtitle:   Redis
+date:       2019-04-26
+author:     Monk
+header-img: img/post-bg-rwd.jpg
+catalog: true
+tags:
+    - Redis
+---
+
 ### redis 基本数据类型
 ### redis 内存淘汰机制：redis 提供 6种数据淘汰策略
 1. volatile-lru：从已设置过期时间的数据集（server.db[i].expires）中挑选最近最少使用的数据淘汰
