[TECH][glming] update

--- a/_posts/2020-04-02-Java8.md
+++ b/_posts/2020-04-02-Java8.md
@@ -1,3 +1,16 @@
+---
+layout:     post
+title:      深入理解Java8
+subtitle:   Java8
+date:       2020-04-02
+author:     Monk
+header-img: img/post-bg-rwd.jpg
+catalog: true
+tags:
+    - Java
+    - Stream
+---
+
 ## Java8
 ### 零.Lambda表达式
 1. 为什么需要Lambda表达式  
