--- a/_posts/2020-04-01-Docker.md
+++ b/_posts/2020-04-01-Docker.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      Docker命令全集
+subtitle:   Docker
+date:       2020-04-01
+author:     Monk
+header-img: img/post-bg-rwd.jpg
+catalog: true
+tags:
+    - Docker
+---
+
 # Docker 全攻略
 ---
 #### 一. docker的优缺点
