[TECH][glming] update

--- a/_posts/2020-04-03-Gradle.md
+++ b/_posts/2020-04-03-Gradle.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      Gradle学习笔记
+subtitle:   gradle
+date:       2020-04-03
+author:     Monk
+header-img: img/post-bg-rwd.jpg
+catalog: true
+tags:
+    - gradle
+---
+
 # Gradle
 ## 安装Gradle
 1. 安装JDK，Gradle 需要运行在一个 Java 环境里
