--- a/_posts/2020-04-05-Nginx.md
+++ b/_posts/2020-04-05-Nginx.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      Nginx学习笔记
+subtitle:   nginx
+date:       2020-04-05
+author:     Monk
+header-img: img/post-bg-rwd.jpg
+catalog: true
+tags:
+    - Nginx
+---
+
 # Nginx - 深入理解Nginx模块开发与架构解析
 ### Nginx 特点：
 1. 更快
