--- a/_posts/2020-04-06-Spring.md
+++ b/_posts/2020-04-06-Spring.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      Spring学习笔记
+subtitle:   spring
+date:       2020-04-06
+author:     Monk
+header-img: img/post-bg-rwd.jpg
+catalog: true
+tags:
+    - spring
+---
+
 # Spring
 ## Spring Boot - Hibernate-Validator进行参数校验
 1. 引入依赖
