[TECH][glming] 更新代码

--- a/_posts/2019-04-26-MySQL.md
+++ b/_posts/2019-04-26-MySQL.md
@@ -10,13 +10,12 @@ tags:
     - MySQL
 ---
 
-# MySQL
-## 数据库的三范式（NF：Normal Form）
+### 数据库的三范式（NF：Normal Form）
 - 1NF. 列的原子性，每个列不可在拆分。如：地址字段，该字段可在拆分为家庭地址和公司地址。
 - 2NF. 一是表必须有一个主键；二是没有包含在主键中的列必须完全依赖于主键，而不能只依赖于主键的一部分。
 - 3NF. 非主键列是直接依赖于主键，还是直接依赖于非主键列。所有主键列和非主键列不能有传递依赖。
 
-## MySQL修改操作
+### MySQL修改操作
 #### 1. 修改表
 1. 修改表名称：`alter table src_table rename to target_table;`
 2. 修改表注释: `alter table tableName comment '修改的注释';`
@@ -67,17 +66,14 @@ SHOW INDEX FROM table_name [FROM db_name]
 SHOW INDEX FROM [db_name.]table_name
 ```
 
-#### 4. 修改数据库
-#### 5. 修改MySQL参数
-
-## MySQL 索引
-概念：
+### MySQL 索引
+##### 概念
 - 索引是一种特殊的文件(InnoDB数据表上的索引是表空间的一个组成部分)，它们包含着对数据表里所有记录的引用指针。更通俗的说，数据库索引好比是一本书前面的目录，能加快数据库的查询速度。  
 - 索引分为聚簇索引和非聚簇索引两种，聚簇索引是按照数据存放的物理位置为顺序的，而非聚簇索引就不一样了；聚簇索引能提高多行检索的速度，而非聚簇索引对于单行的检索很快。  
 - 要注意的是，建立太多的索引将会影响更新和插入的速度，因为它需要同样更新每个索引文件。对于一个经常需要更新和插入的表格，就没有必要为一个很少使用的where字句单独建立索引了，对于比较小的表，排序的开销不会很大，也没有必要建立另外的索引。  
 
-分类：
-##### 普通索引
+##### 分类
+###### 普通索引
 普通索引(由关键字KEY或INDEX定义的索引)的唯一任务是加快对数据的访问速度。因此，应该只为那些最经常出现在查询条件(WHERE column = ...)或排序条件(ORDER BY column)中的数据列创建索引。只要有可能，就应该选择一个数据最整齐、最紧凑的数据列(如一个整数类型的数据列)来创建索引。
 
 - 直接创建索引(length表示使用名称前1ength个字符)  
@@ -101,7 +97,7 @@ DROP INDEX index_name ON table_name;
 CREATE INDEX mytable_categoryid_userid ON mytable (category_id,user_id);  
 使用"表名_字段1名_字段2名"的方式  
 
-##### 唯一索引
+###### 唯一索引
 与普通索引类似，不同的就是：索引列的值必须唯一，但允许有空值（注意和主键不同）。如果是组合索引，则列值的组合必须唯一，创建方法和普通索引类似。如果能确定某个数据列将只包含彼此各不相同的值，在为这个数据列创建索引的时候就应该用关键字UNIQUE把它定义为一个唯一索引。这么做的好处：一是简化了MySQL对这个索引的管理工作，这个索引也因此而变得更有效率；二是MySQL会在有新记录插入数据表时，自动检查新记录的这个字段的值是否已经在某个记录的这个字段里出现过了；如果是，MySQL将拒绝插入那条新记录。也就是说，唯一索引可以保证数据记录的唯一性。事实上，在许多场合，人们创建唯一索引的目的往往不是为了提高访问速度，而只是为了避免数据出现重复。
 - 创建唯一索引:`CREATE UNIQUE INDEX index_name ON table_name(column_name)`
 - 修改表索引:`ALTER TABLE table_name ADD UNIQUE index_name ON (column_name)`
@@ -115,19 +111,19 @@ UNIQUE index_name (title)
 ); 
 ```  
 
-##### 主索引
+###### 主索引
 必须为主键字段创建一个索引，这个索引就是所谓的"主索引"。主索引与唯一索引的唯一区别是：前者在定义时使用的关键字是PRIMARY而不是UNIQUE。
 
-##### 外键索引
+###### 外键索引
 如果为某个外键字段定义了一个外键约束条件，MySQL就会定义一个内部索引来帮助自己以最有效率的方式去管理和使用外键约束条件。
 
-##### 全文索引（FULLTEXT）
+###### 全文索引（FULLTEXT）
 fulltext索引仅可用于 MyISAM 表,他们可以从CHAR、VARCHAR或TEXT列中作为CREATE TABLE语句的一部分被创建
 
-##### 单列索引、多列索引
+###### 单列索引、多列索引
 多个单列索引与单个多列索引的查询效果不同，因为执行查询时，MySQL只能使用一个索引，会从多个索引中选择一个限制最为严格的索引。
 
-##### 组合(复合)索引（最左前缀）
+###### 组合(复合)索引（最左前缀）
 平时用的SQL查询语句一般都有比较多的限制条件，所以为了进一步榨取MySQL的效率，就要考虑建立组合索引。例如上表中针对title和time建立一个组合索引：
 ALTER TABLE article ADD INDEX index_titme_time (title(50),time(10))。
 建立这样的组合索引，其实是相当于分别建立了下面两组组合索引：
@@ -160,8 +156,7 @@ QA:
   - 主键更适合那些不容易更改的唯一标识，如自动递增列、身份证号等。
   - 在 RBO 模式下，主键的执行计划优先级要高于唯一索引。 两者可以提高查询的速度。
 
-## MySQL优化
-
+### MySQL优化
 #### 索引优化
 1. 何时使用聚集索引或非聚集索引？
 <img src="../../../../img/mysql_index.jpg">
