[TECH][glming] Java虚拟机参数

--- a/_posts/2020-04-10-JVM-Args.md
+++ b/_posts/2020-04-10-JVM-Args.md
@@ -12,7 +12,7 @@ tags:
 
 （-XX:+TraceClassLoading）表示开启 TraceClassLoading 选项：以 -XX参数开头，+表示开启选项，-表示关闭选项 后面跟上JVM参数
 
-赋值类参数： -XX:<option>=<value> 表示将 option选项的值设置为value
+赋值类参数： `-XX:<option>=<value>` 表示将 option选项的值设置为value
 （-XX:+TraceClassUnloading） 表示开启类的卸载日志
 
 1. -Xms:设置堆空间的最小值或初始值
@@ -42,7 +42,7 @@ tags:
 8. -XX:+UseConcMarkSweepGC : 在老年代使用CMS收集器
 9. -XX:+UseParNewGC : 使用ParNew收集器
 
-#### G1收集器相关参数
+### G1收集器相关参数
 1. -XX:+UseG1GC: 使用G1收集器
 2. G1HeapWastePercent: 在Global COncurrent Marking结束之后，我们可以知道Old区中有多少空间要被回收，在每次YGC之后和再次发生Mixed GC之前，会检查垃圾占比是否达到此参数，只有达到了，下一次才会进行MixeGC
 3. G1MixedGCLiveThresholdPercent：Old区中的存活对象的占比，只有在此参数下，才会被选入CSet
